--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
     <h1>New Year Countdown</h1>
     <div id="countdown" class="countdown">
       <div class="time">
-        <h2 class="days">00</h2>
+        <h2 id="days">00</h2>
         <small>days</small>
       </div>
       <div class="time">
-        <h2 class="hours">00</h2>
+        <h2 id="hours">00</h2>
         <small>hours</small>
       </div>
       <div class="time">
-        <h2 class="minutes">00</h2>
+        <h2 id="minutes">00</h2>
         <small>minutes</small>
       </div>
       <div class="time">
-        <h2 class="seconds">00</h2>
+        <h2 id="seconds">00</h2>
         <small>seconds</small>
       </div>
     </div>
-    <!-- <img src="./images/spinner.gif" alt="Loading..." class="loading" id="loading" /> -->
+    <img
+      src="./images/spinner.gif"
+      alt="Loading..."
+      class="loading"
+      id="loading"
+    />
     <script src="script.js"></script>
   </body>
 </html>
